# nyar-document

./: .editorconfig  .gitignore  Cargo.toml
projects/nyar-document/: Cargo.toml  readme.md
projects/nyar-document/src/: lib.rs
projects/nyar-document/src/errors/: mod.rs
projects/nyar-document/src/interfaces/: mod.rs
projects/nyar-document/src/module/: mod.rs
projects/nyar-document/src/modules/: mod.rs
projects/nyar-document/src/pages/: mod.rs
projects/nyar-document/src/pages/interfaces/: mod.rs
projects/nyar-document/src/pages/modules/: mod.rs
projects/nyar-document/src/pages/structures/: mod.rs
projects/nyar-document/src/pages/types/: mod.rs
projects/nyar-document/src/pages/variants/: mod.rs
projects/nyar-document/src/structures/: mod.rs
projects/nyar-document/src/traits/: mod.rs
projects/nyar-document/templates/: interface.html.jinja2  module.html  module.html.jinja2
projects/nyar-document/tests/: main.rs
projects/nyar-rehydrated/: Cargo.toml  readme.md
projects/nyar-rehydrated/src/: main.rs
projects/nyar-rehydrated/tests/: main.rs
