[package]
name = "nyar-document"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Nyar document builder"
repository = "https://github.com/nyar-vm/nyar-document"
documentation = "https://nyar-document"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
dashmap = "5.4.0"

[dependencies.askama]
version = "0.12.0"
features = []

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
