[package]
name = "nyar-document"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Nyar document builder"
repository = "https://github.com/nyar-vm/nyar-document"
documentation = "https://nyar-document"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
semver = "1.0.17"
dioxus = "0.3.2"
serde = { version = "1.0.163", features = ["derive"] }
sir = { version = "0.3.0", features = ["dioxus"] }

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
